# ije-base-project

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
docker/: Dockerfile
docker/pack/: Dockerfile  linux-get-deps.py  linux-test.Dockerfile  linux.Dockerfile
game/include/: config.h.in
game/src/: main.cpp
src/: main.cpp
